--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^13.2.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
