--- a/package.json
+++ b/package.json
@@ -30,32 +30,31 @@
     "babel-preset-expo": "^13.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "~53.0.9",
-    "expo-blur": "~14.1.4",
+    "expo": "53.0.16",
+    "expo-blur": "14.1.5",
     "expo-constants": "~17.1.6",
-    "expo-font": "~13.3.1",
+    "expo-font": "13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "2.3.2",
     "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "~7.1.5",
+    "expo-linking": "7.1.6",
     "expo-network": "^7.1.5",
     "expo-notifications": "^0.31.3",
     "expo-permissions": "^14.4.0",
-    "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "5.1.2",
+    "expo-splash-screen": "0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-symbols": "0.4.5",
+    "expo-system-ui": "5.0.10",
+    "expo-web-browser": "14.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-css-interop": "^0.1.22",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
