--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EXPO_PUBLIC_API_URL=http://192.168.100.21:8080/HiVision
+EXPO_PUBLIC_API_URL=http://192.168.2.7:8080/HiVision
 EXPO_PUBLIC_API_KEY=abc123
+EXPO_PUBLIC_GEMINI_KEY=AIzaSyCKlweT5JnG331LOc9mbysHShdUSzNVSVk
