--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@stomp/stompjs": "^7.1.1",
     "@tanstack/react-query": "^4.39.2",
     "axios": "^1.10.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -63,11 +64,14 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "reconnecting-websocket": "^4.4.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/sockjs-client": "^1.5.4",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cross-env": "^7.0.3",
