--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-android-widget": "^0.17.0",
     "react-native-calendars": "^1.1313.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
